Fix layout problem again

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -308,7 +308,6 @@ html {
   width: 100%;
   max-height: 95%;
   min-height: 5%;
-  overflow: hidden;
 }
 
 .app-header {
